k8s/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-app
  labels:
    app: ui-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-app
  template:
    metadata:
      labels:
        app: ui-app
    spec:
      containers:
        - name: ui-app
          image: itisshajith/test:latest3
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
