k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app-service
spec:
  selector:
    app: api-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: LoadBalancer
