k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-app-service
spec:
  selector:
    app: ui-app
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
