k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: ui-app-service
            port:
              name: http
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: api-app-service
            port:
              name: http
              number: 8080
